feat: Experiencia e Formação

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,8 @@
             <button mat-menu-item (click)="changeHome()">Home</button>
             <button mat-menu-item (click)="changeAbout()">Sobre</button>
             <button mat-menu-item (click)="changeSkills()">Habilidades</button>
-            <!-- <button mat-menu-item (click)="changeExperiences()">Experiencias</button> -->
+            <button mat-menu-item (click)="changeExperiences()">Experiencias</button>
+            <button mat-menu-item (click)="changeEducation()">Formação</button>
             <button mat-menu-item (click)="changeProjects()">Projetos</button>
         </nav>
         <div>
