feat: Adicionando os certificados

--- a/src/app/components/education/dataAnalytics/data-analytics-compartilhar-dados/data-analytics-compartilhar-dados.component.html
+++ b/src/app/components/education/dataAnalytics/data-analytics-compartilhar-dados/data-analytics-compartilhar-dados.component.html
@@ -28,5 +28,5 @@
             </ul>
         </div>
     </div>
-    <!-- <iframe src="https://www.coursera.org/account/accomplishments/certificate/GWNGDZCA829J" class="pdf-iframe"></iframe> -->
+    <!-- <img src="https://drive.google.com/uc?export=view&id=1eXX8xydF45tV6RF-Ae92iq2Q3PFlS3bt" alt="" class="pdf-iframe"> -->
 </section> 
