--- a/src/app/components/education/dataAnalytics/data-analytics-analisar-dados/data-analytics-analisar-dados.component.html
+++ b/src/app/components/education/dataAnalytics/data-analytics-analisar-dados/data-analytics-analisar-dados.component.html
@@ -30,5 +30,5 @@
             </ul>
         </div>
     </div>
-    <iframe src="https://www.coursera.org/account/accomplishments/certificate/256V4B5PYMP8" class="pdf-iframe"></iframe>
+    <img src="https://drive.google.com/uc?export=view&id=1p6OBfqgzF1_UWC8RXDG6m_zvLGQGQmHO" alt="" class="pdf-iframe">
 </section> 
