--- a/src/app/components/education/dataAnalytics/data-analytics-preparar-dados/data-analytics-preparar-dados.component.html
+++ b/src/app/components/education/dataAnalytics/data-analytics-preparar-dados/data-analytics-preparar-dados.component.html
@@ -30,5 +30,5 @@
             </ul>
         </div>
     </div>
-    <iframe src="https://www.coursera.org/account/accomplishments/certificate/PYWPWS5TTTC7" class="pdf-iframe"></iframe>
+    <img src="https://drive.google.com/uc?export=view&id=1eXX8xydF45tV6RF-Ae92iq2Q3PFlS3bt" alt="" class="pdf-iframe">
 </section> 
