--- a/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web/desenvolvimento-web.component.html
+++ b/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web/desenvolvimento-web.component.html
@@ -10,7 +10,8 @@
     </div>
     <div class="card-education-index-description">
         <h1>Desenvolvimento Web</h1>
-        <p></p>
+        <p>A Trybe é uma escola de tecnologia que oferece o curso de Desevolvimento Web Full-Stack com mais de 1500 horas de formação que aborda fundamentos de desenvolvimento web, desenvolvimento Front-end, desenvolvimento Back-end, ciência da computação, metodologias ágeis e habilidades comportamentais.
+            Turma 25 | Julho de 2022 a Julho de 2023. 
         <hr>
         <h3>Módulos:</h3>
         <div class="habilidades">
