--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -2,7 +2,10 @@
     <div class="home-info">
         <p>Olá, meu nome é</p>
         <h1>Priscila Sartori</h1>
-        <h2>Desenvolvedora Full-stack</h2>
+        <h2>
+            {{ partialWord }}
+            <span class="cursor" [ngClass]="{ 'blink': partialWord.length === 0 }"></span>
+        </h2>
     </div>
     <div class="home-img">
         <!-- <img src="https://d3un0zjblgkxzb.cloudfront.net/drupal/public/styles/iwc_banner_internas_2000x384_webp/public/media/hero/2023-02/joshua-woroniecki-lzh3hPtJz9c-unsplash.jpg.webp?VersionId=4r4yJ5w_u2tTG2HAIiXBStDgszwP_thC&itok=46LDaQw_" alt=""> -->
