feat: alteração de projetos

--- a/src/app/dialogos/detalhes-projetos/detalhes-projetos.component.css
+++ b/src/app/dialogos/detalhes-projetos/detalhes-projetos.component.css
@@ -1,9 +1,9 @@
 section {
     display: flex;
     flex-direction: row;
-    width: 75%;
+    width: 70%;
     height: 70%;
-    padding: 40px;
+    padding: 30px;
     background-color: indigo;
     border-radius: 1rem;
     position: fixed;
@@ -65,3 +65,26 @@ h1 {
     background: transparent;
     color: #8257E6;
 }
+
+.projectInfo-details {
+    overflow: auto;
+    height: 350px;
+}
+
+/* Estilizando a barra de rolagem */
+.projectInfo-details::-webkit-scrollbar {
+    width: 6px; /* Largura da barra de rolagem */
+  }
+  
+  .projectInfo-details::-webkit-scrollbar-track {
+    background: indigo	; /* Cor de fundo da barra de rolagem */
+  }
+  
+  .projectInfo-details::-webkit-scrollbar-thumb {
+    background-color: MediumPurple; /* Cor da alça da barra de rolagem */
+    border-radius: 6px; /* Borda arredondada da alça da barra de rolagem */
+  }
+  
+  .projectInfo-details::-webkit-scrollbar-thumb:hover {
+    background-color: MediumSlateBlue; /* Cor da alça da barra de rolagem ao passar o mouse */
+  }
