--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -7,8 +7,8 @@
             <span class="cursor" [ngClass]="{ 'blink': partialWord.length === 0 }"></span>
         </h2>
     </div>
-    <div class="home-img">
+    <!-- <div class="home-img"> -->
         <!-- <img src="https://d3un0zjblgkxzb.cloudfront.net/drupal/public/styles/iwc_banner_internas_2000x384_webp/public/media/hero/2023-02/joshua-woroniecki-lzh3hPtJz9c-unsplash.jpg.webp?VersionId=4r4yJ5w_u2tTG2HAIiXBStDgszwP_thC&itok=46LDaQw_" alt=""> -->
         <!-- <img src="https://res.cloudinary.com/practicaldev/image/fetch/s--O0u1bNHs--/c_limit%2Cf_auto%2Cfl_progressive%2Cq_66%2Cw_880/https://miro.medium.com/max/1400/0%2APXf5ge7QCN9Ga_CL.gif" alt=""> -->
-    </div>
+    <!-- </div> -->
 </div>
