--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -4,7 +4,8 @@
     height: 100%;
     top: 10px;
     /* background-color: black; */
-    background-image: url('https://d3un0zjblgkxzb.cloudfront.net/drupal/public/styles/iwc_banner_internas_2000x384_webp/public/media/hero/2023-02/joshua-woroniecki-lzh3hPtJz9c-unsplash.jpg.webp?VersionId=4r4yJ5w_u2tTG2HAIiXBStDgszwP_thC&itok=46LDaQw_');
+    background-image: url('https://img.freepik.com/fotos-gratis/plano-de-fundo-de-programacao-com-pessoa-trabalhando-com-codigos-no-computador_23-2150010125.jpg?w=740&t=st=1696711015~exp=1696711615~hmac=9ff6642c7189c1a57ada5bf95c44aa55f3608ebe41fc159c8318438c04285938');
+    /* background-image: url('https://d3un0zjblgkxzb.cloudfront.net/drupal/public/styles/iwc_banner_internas_2000x384_webp/public/media/hero/2023-02/joshua-woroniecki-lzh3hPtJz9c-unsplash.jpg.webp?VersionId=4r4yJ5w_u2tTG2HAIiXBStDgszwP_thC&itok=46LDaQw_'); */
     background-repeat: no-repeat;
     background-position:left;
     background-color: black;
@@ -14,9 +15,9 @@
 .home-info {
     display: flex;
     flex-direction: column;
-    width: 50%;
-    align-items:flex-start;
-    /* height: 600px; */
+    width: 90%;
+    /* align-items:flex-start; */
+    align-items: flex-end;
     padding: 150px 0 0 50px;
 }
 
