style: home, footer e header

--- a/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web-backend/desenvolvimento-web-backend.component.html
+++ b/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web-backend/desenvolvimento-web-backend.component.html
@@ -10,8 +10,8 @@
     </div>
     <div class="card-education-index-description">
         <h1>Desenvolvimento Back-end</h1>
-        <p>Você vai estudar a parte do desenvolvimento de sites e apps do lado do servidor. Ou seja, vai entender, por exemplo, como um banco de dados é capaz de alimentar um portal com informações que o usuário deseja e o que ocorre nos bastidores do funcionamento de um site.</p>
-        <p>Ao final do curso, você estará preparado para executar tarefas de uma pessoa desenvolvedora ou programadora backend. O módulo permitirá que a pessoa estudante crie interfaces de comunicação entre sistemas (APIs), faça consultas em banco de dados, crie testes (unitários e de integração) e configure tecnologias que fazem um site funcionar.</p>
+        <p>Aprofundei e apliquei de forma prática conteúdos como: Docker, MySQL, Node.js & Express, Testes Unitários e de Integração com Mocha, Chai e Sinon, TypeScript, Arquitetura em Camadas, REST, JWT, ORM com Sequelize, Deployment, POO e princípios SOLID.
+        </p>
         <hr>
         <h3>Habilidades técnicas:</h3>
         <div class="habilidades">
@@ -37,5 +37,4 @@
         </div>
     </div>
     <iframe src="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/74085504" class="pdf-iframe"></iframe>
-</section> 
-
+</section>
