--- a/src/app/pages/education/education.component.html
+++ b/src/app/pages/education/education.component.html
@@ -16,6 +16,7 @@
         <app-desenvolvimento-Web-front-end *ngIf="educationService.education == 'Trybe-frontEnd'"></app-desenvolvimento-Web-front-end>
         <app-desenvolvimento-Web-backend *ngIf="educationService.education == 'Trybe-backEnd'"></app-desenvolvimento-Web-backend>
         <app-desenvolvimento-Web-ciencia-dados *ngIf="educationService.education == 'Trybe-ciencia'"></app-desenvolvimento-Web-ciencia-dados>
+        <app-desenvolvimento-web-csharp *ngIf="educationService.education == 'Trybe-c#'"></app-desenvolvimento-web-csharp>
         <app-economia *ngIf="educationService.education == 'Economia'"></app-economia>
         <app-data-analytics *ngIf="educationService.education == 'DataAnalytics'"></app-data-analytics>
         <app-data-analytics-fundamentos *ngIf="educationService.education == 'DataAnalytics-fundamentos'"></app-data-analytics-fundamentos>
