--- a/src/app/components/footer/footer.component.css
+++ b/src/app/components/footer/footer.component.css
@@ -1,31 +1,33 @@
 .footer {
     display: flex;
     flex-direction: row;
-    color: #fff;
-    background-color: black;
+    color: #1a2744;
+    background-color: #fff;
     justify-content: space-evenly;
+    height: 50px;
+    align-items: center;
 }
 
 .footer-icons {
     display: flex;
     flex-direction: row;
-    color: #fff;
+    color: #50E3C2;
     padding-top: 5px;
 }
 
 .footer-icons a {
     margin: 2px 0 0 20px;
-    color: #fff;
+    color: #50E3C2;
 }
 
 .footer p {
-    padding-top: 5px;
+    padding-top: 15px;
 }
 
 .footer button {
     background-color: transparent;
     border: none;
-    color: #fff;
+    color: #1a2744;
     padding: 0;
     font-size: medium;
 }
