--- a/src/app/pages/sobre/sobre.component.css
+++ b/src/app/pages/sobre/sobre.component.css
@@ -1,32 +1,44 @@
 .sobre{
     display: flex;
     flex-direction: row;
-    background-color: black;
     height: 100%;
 }
 
 .sobre-perfil {
     display: flex;
     flex-direction: column;
-    padding: 15px 30px 15px 30px;
+    padding: 0px 30px 15px 30px;
+    justify-content: center;
+    align-items: center;
+}
+
+.sobre-perfil div {
+    width: 210px;
+    height: 210px;
+    border-radius: 50%;
+    background: linear-gradient(170deg,#0FFA7D 0%,#0FF2FA 100%);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .sobre-perfil-1 {
     width: 200px;
     border-radius: 100px;
-    margin: 0 0 10px 20px;
 }
 
 .sobre-perfil-2 {
     width: 250px;
+    margin-top: 10px;
 }
 
 .sobre-perfil-3 {
     width: 250px;
+    margin-top: 10px;
 }
 
 .sobre-descricao {
-    background-color: indigo;
+    background-color: #fff;
     display: flex;
     margin-top: 20px;
     flex-direction: column;
@@ -34,10 +46,12 @@
     height: 360px;
     border-radius: 10px;
     padding: 30px;
+    box-shadow: 3px 4px 3px 3px #50E3C2;
+    border: #c8cbd6 solid 1px;
 }
 
 .sobre-descricao p {
-    color: #fff;
+    color: #1a2744;
     text-align: justify;
     padding-top:20px;
 }
