--- a/src/app/pages/sobre/sobre.component.html
+++ b/src/app/pages/sobre/sobre.component.html
@@ -1,8 +1,10 @@
 <div class="sobre">
     <div class="sobre-perfil">
-        <img class="sobre-perfil-1" src="https://avatars.githubusercontent.com/u/104307222?v=4" alt="" />
-        <img class="sobre-perfil-2" src="https://github-readme-stats-sigma-five.vercel.app/api?username=priscilaSartori&show_icons=true&theme=dracula&include_all_commits=true&count_private=true"/>
-        <img class="sobre-perfil-3" src="https://github-readme-stats-sigma-five.vercel.app/api/top-langs/?username=priscilaSartori&layout=compact&langs_count=7&theme=dracula"/> 
+        <div>
+            <img class="sobre-perfil-1" src="https://avatars.githubusercontent.com/u/104307222?v=4" alt="" />
+        </div>
+        <img class="sobre-perfil-2" src="https://github-readme-stats-sigma-five.vercel.app/api?username=priscilaSartori&show_icons=true&include_all_commits=true&count_private=true"/>
+        <img class="sobre-perfil-3" src="https://github-readme-stats-sigma-five.vercel.app/api/top-langs/?username=priscilaSartori&layout=compact&langs_count=7"/> 
     </div>
     <div class="sobre-descricao">
         <p>Sou Desenvolvedora Full-stack com conhecimentos em JavaScript, React.js, Next.js, Angular.js, Redux, TypeScript, Python, MySQL, Docker, MongoDB, C# e consumo de APIs REST.</p> 
