--- a/src/app/components/experience/sabios/sabios.component.html
+++ b/src/app/components/experience/sabios/sabios.component.html
@@ -10,8 +10,8 @@
         </header>
         <div class="card-sabios-description">
             <p>Sou responsável pelo desenvolvimento Front-End com framework AngularJS, Angular 10+ e Reactive Forms.</p>
-            <p>Utilizei padrões de arquitetura de software MVC, BFF / orientada a eventos e ferramentas de qualidade de código como: OWASP, DDD, Padrão BFF.</p>
-            <p>Trabalhei em colaboração com a equipe de desenvolvimento back-end, para integrar componentes front-end e back-end de nossas aplicações.</p>
+            <p>Utilizo padrões de arquitetura de software MVC, BFF / orientada a eventos e ferramentas de qualidade de código como: OWASP, DDD, Padrão BFF.</p>
+            <!-- <p>Trabalhei em colaboração com a equipe de desenvolvimento back-end, para integrar componentes front-end e back-end de nossas aplicações.</p> -->
         </div>
         <div class="card-sabios-techs">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" title="AngularJS" width="50px"/>
