--- a/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web-fundamentos/desenvolvimento-web-fundamentos.component.html
+++ b/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web-fundamentos/desenvolvimento-web-fundamentos.component.html
@@ -1,7 +1,7 @@
 <section  class="education-index">
     <div class="card-education-index-resume">
         <div class="card-education-index">
-            <img src="https://www.betrybe.com/static/images/logo-negative-green.svg" alt="Logo Sabios">
+            <img src="https://theme.zdassets.com/theme_assets/9633455/ecf228e8c15da1a8bd07f574e675a0ac59330968.png" alt="Logo Sabios" width="150px">
             <div class="card-education-index-info">
                 <p>Nível: Profissionalizante</p>
                 <p>Status: Concluído</p>
