--- a/src/app/pages/projetos/projetos.component.css
+++ b/src/app/pages/projetos/projetos.component.css
@@ -1,6 +1,5 @@
 section {
     margin: 0;
-    background-color: black;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -10,9 +9,11 @@ section {
 
 .projeto {
     width: 370px;
-    border: 3px solid indigo;
-    background-color: indigo;
+    /* border: 3px solid indigo;
+    background-color: indigo; */
     margin: 10px;
+    box-shadow: 1px 2px 1px 1px;
+    border: #c8cbd6 solid 3px;
 }
 
 .imagemProjeto {
@@ -20,17 +21,20 @@ section {
     padding: 10px 0 10px 0;
     width: 350px;
     height: 250px;
+    
 }
 
 .imagemProjeto-img {
     width: 350px;
     height: 250px;
+    border: #c8cbd6 solid 2px;
 }
 
 .projeto:hover {
     z-index: 1;
     background-color: transparent;
     border: none;
+    box-shadow: none;
 
     .imagemProjeto-img{
         position: relative;
@@ -38,6 +42,7 @@ section {
         left: -15px;
         width: 370px;
         height: 320px;
+        box-shadow: 3px 4px 3px 3px;
     }
     .infoProjeto {
         display: none;
@@ -58,7 +63,7 @@ section {
 }
 
 h3 {
-    color: #fff;
+    color: #1a2744;
 }
 
 .iconeProjeto {
