--- a/src/app/pages/skills/skills.component.css
+++ b/src/app/pages/skills/skills.component.css
@@ -79,7 +79,7 @@ h2 {
     font-size: 30px;
     position: relative;
     padding: 30px 0 10px 30px;
-    color: #50E3C2;
+    color: #1a2744;
     z-index: 0;
     opacity: 1;
 }
