--- a/src/app/pages/sobre/sobre.component.css
+++ b/src/app/pages/sobre/sobre.component.css
@@ -7,8 +7,8 @@
 .sobre-perfil {
     display: flex;
     flex-direction: column;
-    padding: 0px 30px 15px 30px;
-    justify-content: center;
+    padding: 30px 30px 15px 30px;
+    justify-content: flex-start;
     align-items: center;
 }
 
