--- a/src/app/dialogos/detalhes-projetos/detalhes-projetos.component.css
+++ b/src/app/dialogos/detalhes-projetos/detalhes-projetos.component.css
@@ -4,7 +4,7 @@ section {
     width: 70%;
     height: 70%;
     padding: 30px;
-    background-color: indigo;
+    background-color: #fff;
     border-radius: 1rem;
     position: fixed;
     top: 50%;
@@ -34,24 +34,25 @@ video {
 .projectPreview-btn a {
     width: 150px;
     height: 30px;
+    box-shadow: 1px 1px 1px 1px;
 }
 
 .projectPreview-btn button {
-    background-color: #8257E6;
+    background-color: #50E3C2;
     width: 150px;
     height: 30px;
-    border: 1px solid #8257E6;
+    border: 1px solid #50E3C2;
 }
 
 .projectInfo {
     width: 390px;
     height: 100%;
-    color: #fff;
+    color: #1a2744;
     padding-left: 40px;
 }
 
 h1 {
-    color: violet;
+    color: #50E3C2;
 }
 
 .projectInfo-titleClose {
@@ -63,7 +64,7 @@ h1 {
 .projectInfo-titleClose button {
     border: none;
     background: transparent;
-    color: #8257E6;
+    color: #1a2744;
 }
 
 .projectInfo-details {
@@ -77,14 +78,14 @@ h1 {
   }
   
   .projectInfo-details::-webkit-scrollbar-track {
-    background: indigo	; /* Cor de fundo da barra de rolagem */
+    background: #fff	; /* Cor de fundo da barra de rolagem */
   }
   
   .projectInfo-details::-webkit-scrollbar-thumb {
-    background-color: MediumPurple; /* Cor da alça da barra de rolagem */
+    background-color: #0FF2FA; /* Cor da alça da barra de rolagem */
     border-radius: 6px; /* Borda arredondada da alça da barra de rolagem */
   }
   
   .projectInfo-details::-webkit-scrollbar-thumb:hover {
-    background-color: MediumSlateBlue; /* Cor da alça da barra de rolagem ao passar o mouse */
+    background-color: #0FFA7D; /* Cor da alça da barra de rolagem ao passar o mouse */
   }
