style: buttons da tela formação

--- a/src/app/components/education/dataAnalytics/data-analytics/data-analytics.component.html
+++ b/src/app/components/education/dataAnalytics/data-analytics/data-analytics.component.html
@@ -18,10 +18,12 @@
                 <button type="button" value="DataAnalytics-fundamentos" (click)="toggleComponent($event)">Fundamentos: dados, dados, em todos os lugares</button>
                 <button type="button" value="DataAnalytics-perguntas" (click)="toggleComponent($event)">Fazer perguntas para tomar decisões com base em dados</button>
                 <button type="button" value="DataAnalytics-preparar-dados" (click)="toggleComponent($event)">Preparar os Dados para Exploração</button>
-                <button type="button" value="DataAnalytics-processar-dados" (click)="toggleComponent($event)">Processar os dados para limpá-los</button>
             </div>
             <div class="habilidades-1">
+                <button type="button" value="DataAnalytics-processar-dados" (click)="toggleComponent($event)">Processar os dados para limpá-los</button>
                 <button type="button" value="DataAnalytics-analisar-dados" (click)="toggleComponent($event)">Analisar os dados para responder às perguntas</button>
+            </div>
+            <div class="habilidades-1">
                 <button type="button" value="DataAnalytics-compartilhar-dados" (click)="toggleComponent($event)">Compartilhar os dados com a arte da visualização</button>
                 <button type="button" value="DataAnalytics-analisarDados-R" (click)="toggleComponent($event)">Análise de dados com programação em R</button>
             </div>
