--- a/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web/desenvolvimento-web.component.html
+++ b/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web/desenvolvimento-web.component.html
@@ -15,11 +15,17 @@
         <hr>
         <h3>Módulos:</h3>
         <div class="habilidades">
-            <button type="button" value="Trybe-fundamentos" (click)="toggleComponent($event)">Fundamentos do Desenvolvimento Web</button>
-            <button type="button" value="Trybe-frontEnd" (click)="toggleComponent($event)">Desenvolvimento Front-end</button>
-            <button type="button" value="Trybe-backEnd" (click)="toggleComponent($event)">Desenvolvimento Back-end</button>
-            <button type="button" value="Trybe-ciencia" (click)="toggleComponent($event)">Ciência da Computação</button>
-            <button type="button" value="Trybe-c#" (click)="toggleComponent($event)">C#</button>
+            <div class="habilidades-1">
+                <button type="button" value="Trybe-fundamentos" (click)="toggleComponent($event)">Fundamentos do Desenvolvimento Web</button>
+                <button type="button" value="Trybe-frontEnd" (click)="toggleComponent($event)">Desenvolvimento Front-end</button>
+            </div>
+            <div class="habilidades-1">
+                <button type="button" value="Trybe-backEnd" (click)="toggleComponent($event)">Desenvolvimento Back-end</button>
+                <button type="button" value="Trybe-ciencia" (click)="toggleComponent($event)">Ciência da Computação</button>
+            </div>
+            <div class="habilidades-1">
+                <button type="button" value="Trybe-c#" (click)="toggleComponent($event)">C#</button>
+            </div>
         </div>
     </div>
     <iframe src="https://api.accredible.com/v1/frontend/credential_website_embed_image/certificate/83174878" class="pdf-iframe"></iframe>
