--- a/src/app/components/education/dataAnalytics/data-analytics/data-analytics.component.css
+++ b/src/app/components/education/dataAnalytics/data-analytics/data-analytics.component.css
@@ -36,7 +36,6 @@
     z-index: 1;
 }
 
-
 .card-education-index-description {
     width: 600px;
     padding: 0 10px 0 10px;
@@ -62,10 +61,14 @@
 
 .habilidades-1 button{
     border: none;
-    background: transparent;
+    background: #50E3C2;
     color: #1a2744;
     text-align: left;
     padding: 5px;
+    width: 200px;
+    height: 40px;
+    margin: 0 5px 5px 0;
+    box-shadow: 1px 1px 1px 1px;
 }
 
 .card-education-index-description p {
