--- a/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web/desenvolvimento-web.component.css
+++ b/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web/desenvolvimento-web.component.css
@@ -54,7 +54,7 @@
     margin: 0;
 }
 
-.habilidades {
+/* .habilidades {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -62,10 +62,30 @@
 
 .habilidades button{
     border: none;
-    background: transparent;
+    background: #50E3C2;
     color: #1a2744;
     text-align: left;
     padding: 5px;
+    width: 200px;
+    margin: 0 5px 5px 0;
+    box-shadow: 1px 1px 1px 1px;
+} */
+.habilidades {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.habilidades-1 button{
+    border: none;
+    background: #50E3C2;
+    color: #1a2744;
+    text-align: left;
+    padding: 5px;
+    width: 200px;
+    height: 40px;
+    margin: 0 5px 5px 0;
+    box-shadow: 1px 1px 1px 1px;
 }
 
 .card-education-index-description p {
