--- a/src/app/pages/projetos/projetos.component.css
+++ b/src/app/pages/projetos/projetos.component.css
@@ -1,6 +1,11 @@
 section {
     margin: 0;
     display: flex;
+    flex-direction: column;
+}
+
+.projetos {
+    display: flex;
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: center;
@@ -14,6 +19,18 @@ section {
     margin: 10px;
     box-shadow: 1px 2px 1px 1px;
     border: #c8cbd6 solid 3px;
+}
+
+.alternativa {
+    display: flex;
+    flex-direction: row;
+}
+
+.filtro {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20px;
 }
 
 .imagemProjeto {
