--- a/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web-front-end/desenvolvimento-web-front-end.component.css
+++ b/src/app/components/education/desenvolvimentoWeb/desenvolvimento-web-front-end/desenvolvimento-web-front-end.component.css
@@ -1,3 +1,8 @@
+.card-education-experiencia {
+    width: 200px;
+    padding: 0 0 20px 0;
+}
+
 .education-index {
     display: flex;
     flex-direction: row;
@@ -31,7 +36,6 @@
     z-index: 1;
 }
 
-
 .card-education-index-description {
     width: 600px;
     padding: 0 10px 0 10px;
@@ -49,14 +53,10 @@
     margin: 0;
 }
 
-.habilidades {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
 .card-education-index-description p {
     text-align: justify;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .pdf-iframe {
@@ -75,4 +75,44 @@
     top: 18px;
     z-index: 1;
     padding-left: 0;
-  }
+}
+
+.habilidades {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    width: 650px;
+}
+
+/* Estilos para telas pequenas */
+@media screen and (max-width: 900px) {
+    .pdf-iframe {
+        display: none;
+    }
+
+    .education-index {
+        flex-direction: column;
+        width: 500px;
+        height: auto;
+    }
+
+    .card-education-index-description p {
+        width: 500px;
+        flex-wrap: wrap;
+    }
+
+    .card-education-index-description h1 {
+        width: 500px;
+        flex-wrap: wrap;
+    }
+    
+    hr {
+        display: none;
+    }
+
+    .habilidades {
+        width: 500px;
+        flex-wrap: wrap;
+    }
+
+}
