--- a/src/app/components/experience/sabios/sabios.component.css
+++ b/src/app/components/experience/sabios/sabios.component.css
@@ -1,8 +1,13 @@
+.sabios {
+    display: flex;
+    justify-content: space-evenly;
+}
+
 .card-sabios {
     background-color: #fff;
     display: flex;
     flex-direction: column;
-    width: 950px;
+    width: 90%;
     height: 360px;
     border-radius: 10px;
     padding: 30px;
@@ -28,9 +33,11 @@ header img {
 }
 
 .card-sabios-description {
-    width: 650px;
+    width: 100%;
     margin: 0 0 20px 0;
     color: #1a2744;
+    display: flex;
+    flex-wrap: wrap;
 }
 
 .card-sabios-techs img {
