--- a/src/app/pages/skills/skills.component.css
+++ b/src/app/pages/skills/skills.component.css
@@ -2,11 +2,11 @@
     position: absolute;
     left: 60px;
     z-index: -1;
-    width: 1000px;
+    width: 100%;
 }
 
 .main{
-    width: 1100px;
+    width: 90%;
     height: auto;
     display: flex;
     padding-left: 50px;
