--- a/src/app/pages/sobre/sobre.component.css
+++ b/src/app/pages/sobre/sobre.component.css
@@ -1,25 +1,35 @@
 .sobre{
     display: flex;
-    flex-direction: row;
     height: 100%;
+    width: 100%;
+    justify-content: space-evenly;
+    flex-direction: row;
 }
 
 .sobre-perfil {
     display: flex;
     flex-direction: column;
-    padding: 30px 30px 15px 30px;
+    width: 20%;
+    padding: 10px 30px 10px 30px; 
     justify-content: flex-start;
     align-items: center;
 }
 
-.sobre-perfil div {
+.sobre-perfil-div1 {
     width: 210px;
-    height: 210px;
+    height: 210px !important;
     border-radius: 50%;
     background: linear-gradient(170deg,#0FFA7D 0%,#0FF2FA 100%);
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+.sobre-perfil-div2 {
+    display: flex; 
+    flex-direction: column;
+    width: 330px !important;
+    margin-left: 40px;
 }
 
 .sobre-perfil-1 {
@@ -28,13 +38,12 @@
 }
 
 .sobre-perfil-2 {
-    width: 250px;
-    margin-top: 10px;
+    width: 300px;
+    margin-top: 20px;
 }
 
 .sobre-perfil-3 {
-    width: 250px;
-    margin-top: 10px;
+    width: 300px;
 }
 
 .sobre-descricao {
@@ -42,16 +51,41 @@
     display: flex;
     margin-top: 20px;
     flex-direction: column;
-    width: 950px;
-    height: 360px;
     border-radius: 10px;
     padding: 30px;
     box-shadow: 3px 4px 3px 3px #50E3C2;
     border: #c8cbd6 solid 1px;
+    width: 60%;
+    height: 80%;
 }
 
 .sobre-descricao p {
     color: #1a2744;
     text-align: justify;
     padding-top:20px;
+}
+
+/* Estilos para telas pequenas (dispositivos móveis) */
+@media screen and (max-width: 900px) {
+    .sobre {
+        flex-direction: column;
+        justify-content: center;
+        height: auto;
+        width: auto;
+        
+    }
+
+    .sobre-perfil {
+        flex-direction: row;
+        width: auto;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        margin: 0px 0 0 25px;
+    }
+
+    .sobre-descricao {
+        width: 85%;
+        margin: 10px 0 0 20px;
+    }
 }
