--- a/src/app/components/experience/sabios/sabios.component.html
+++ b/src/app/components/experience/sabios/sabios.component.html
@@ -9,9 +9,7 @@
             <img src="https://media.licdn.com/dms/image/C4E0BAQFE7ztr5OmljA/company-logo_100_100/0/1580931166256/sabiaexperience_logo?e=1703721600&v=beta&t=-YlHR8IbHwe29LRkbeOszXqH5yZIZJOxIsJyZM0y02E" alt="Logo Sabios">
         </header>
         <div class="card-sabios-description">
-            <p>Sou responsável pelo desenvolvimento Front-End com framework AngularJS, Angular 10+ e Reactive Forms.</p>
-            <p>Utilizo padrões de arquitetura de software MVC, BFF / orientada a eventos e ferramentas de qualidade de código como: OWASP, DDD, Padrão BFF.</p>
-            <!-- <p>Trabalhei em colaboração com a equipe de desenvolvimento back-end, para integrar componentes front-end e back-end de nossas aplicações.</p> -->
+            <p>Atuação com PJ na EdTech com foco em realização do mapeamento e diagnóstico para transformação do site, criação de novas telas utilizando AngulaJS, TypeScript, mensageria e desenvolvimento de formulários com Reactive Forms.</p>
         </div>
         <div class="card-sabios-techs">
             <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" title="AngularJS" width="50px"/>
